--- a/index.html
+++ b/index.html
@@ -3,20 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>CHUUUUUU</title>
+    <style>
+        html, body {
+    width: 100%;
+  }
+    </style>
   </head>
   <body>
     <canvas width="899" height="1599" id="canvas"></canvas>
     <script>
       var canvas = document.getElementById("canvas");
       var ctx = canvas.getContext("2d");
-      var img1 = loadImage('http://upload.wikimedia.org/wikipedia/en/2/24/Lenna.png', main);
-      var img2 = loadImage('http://introcs.cs.princeton.edu/java/31datatype/peppers.jpg', main);
+      ctx.canvas.width = window.innerWidth;
+      //ctx.canvas.height = window.innerHeight;
+      var img1 = loadImage('https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_screenshot.jpg', main);
+      var img2 = loadImage('https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_qrcode.png', main);
       var imagesLoaded = 0;
       function main() {
           imagesLoaded += 1;
           if(imagesLoaded == 2) {
               ctx.drawImage(img1, 0, 0);
               ctx.drawImage(img2, 230, 299, 440, 440 * img2.height / img2.width);
+              var img = canvas.toDataURL("image/jpeg");
+              document.write('<img src="'+img+'"/>');
+              canvas.parentNode.removeChild(canvas);
           }
       }
       function loadImage(src, onload) {
