--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       var hourOfDay = d.getUTCHours();
       var dayOfWeek = d.getDay();
       var isReady = false;
+      var dStr = d.getDate()  + "-" + (d.getMonth()+1) + "-" + d.getFullYear();
       var img1 = loadImage('https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_screenshot.jpg', main);
-      var img2 = loadImage('https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_fakecode.png', main);
+      var img2 = loadImage('https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/' + dStr + '.png', main);
       if (hourOfDay == 10 && dayOfWeek > 0 && dayOfWeek < 6) {
           img2 = loadImage('https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_qrcode.png', main);
       }
