--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>CHUUUUUU</title><style>html,body{width:100%}</style></head><body> <canvas width="899" height="1599" id="canvas"></canvas> <script>var canvas=document.getElementById("canvas");var ctx=canvas.getContext("2d");ctx.canvas.width=window.innerWidth;var d=new Date();var hourOfDay=d.getUTCHours();var dayOfWeek=d.getDay();var isReady=false;var dStr=d.getDate()+"-"+(d.getMonth()+1)+"-"+d.getFullYear();var img1=loadImage('https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_screenshot.jpg',main);var img2=loadImage('https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_fakecode.png',main);if(hourOfDay==10&&dayOfWeek>0&&dayOfWeek<6){img2=loadImage('https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/'+dStr+'.png',main);}var imagesLoaded=0;function main(){imagesLoaded+=1;if(imagesLoaded==2){ctx.drawImage(img1,0,0);ctx.drawImage(img2,230,299,440,440*img2.height/img2.width);var img=canvas.toDataURL("image/jpeg");document.write('<img src="'+img+'"/>');canvas.parentNode.removeChild(canvas);}}function loadImage(src,onload){var img=new Image();img.onload=onload;img.src=src;return img;}</script> </body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>CHUUUUUU</title>
+    <style>
+        html,
+        body {
+            width: 100%
+        }
+		img#background
+		{
+			position:absolute;
+			top: 10px;
+			left: 10px;
+			z-index: 1;
+		}
+		img#qr
+		{
+			position:absolute;
+			top: 25px;
+			left: 25px;
+			z-index: 2;
+		}
+    </style>
+</head>
+
+<body>
+    <img id="background" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_screenshot.jpg">
+    <img id="qr" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/14-8-2019.png">
+</body>
+
+</html>
