--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		img#qr
 		{
 			position:absolute;
-			top: 400px;
-			left: 400px;
+			top: 299px;
+			left: 230px;
 			z-index: 2;
 		}
     </style>
@@ -28,7 +28,7 @@
 
 <body>
     <img id="background" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_screenshot.jpg">
-    <img id="qr" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/14-8-2019.png">
+    <img id="qr" width="440px" height="440px" src="https://zxing.org/w/chart?cht=qr&chs=350x350&chld=L&choe=ISO-8859-1&chl=aeaedf29d547dc1b714b75aaeb5715723858b23e94fa37c4866da650ce86597c">
 </body>
 
 </html>
