--- a/index.html
+++ b/index.html
@@ -1,34 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title>CHUUUUUU</title>
-    <style>
-        html,
-        body {
-            width: 100%
-        }
-		img#background
-		{
-			position:absolute;
-			top: 0px;
-			left: 0px;
-			z-index: 1;
-		}
-		img#qr
-		{
-			position:absolute;
-			top: 299px;
-			left: 230px;
-			z-index: 2;
-		}
-    </style>
-</head>
-
-<body>
-    <img id="background" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_screenshot.jpg">
-    <img id="qr" width="440px" height="440px" src="https://zxing.org/w/chart?cht=qr&chs=350x350&chld=L&choe=ISO-8859-1&chl=aeaedf29d547dc1b714b75aaeb5715723858b23e94fa37c4866da650ce86597c">
-</body>
-
-</html>
+<!DOCTYPE html><html><head> <meta charset="utf-8"> <title>CHUUUUUU</title> <style>html, body{width: 100%}img#background{position:absolute;top: 0px;left: 0px;z-index: 1;}img#qr{position:absolute;top: 247px;left: 177px;z-index: 2;}</style></head><body> <img id="background" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_screenshot.jpg"> <img id="qr" width="545px" height="545px" src="https://zxing.org/w/chart?cht=qr&chs=350x350&chld=L&choe=ISO-8859-1&chl=aeaedf29d547dc1b714b75aaeb5715723858b23e94fa37c4866da650ce86597c"></body></html>
