--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html> <head> <meta charset="utf-8"> <title>CHUUUUUU</title> <style>html, body{width: 100%}img#background{position: absolute; top: 0px; left: 0px; z-index: 1;}img.qr{position: absolute; top: 247px; left: 177px; z-index: 2;}img#invalid{display: none;}</style> </head> <body> <img id="background" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_screenshot.jpg">
-<img class="qr" id="invalid" width="545px" height="545px" src="https://zxing.org/w/chart?cht=qr&chs=350x350&chld=L&choe=ISO-8859-1&chl=aeaedf29d547dc1b714b75aaeb5715723858b23e94fa37c4866da650ce86597c">
-<img class="qr" width="545px" height="545px" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_fakecode.png">
+<!DOCTYPE html><html> <head> <meta charset="utf-8"> <title>YuanYuan VIP Shuttle Ticket</title> <style>html, body{width: 100%}img#background{position: absolute; top: 0px; left: 0px; z-index: 1;}img.qr{position: absolute; top: 247px; left: 177px; z-index: 2;}img#invalid{display: none;}</style> </head> <body> <img id="background" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_screenshot.jpg">
+<img class="qr" width="545px" height="545px" src="https://zxing.org/w/chart?cht=qr&chs=350x350&chld=L&choe=ISO-8859-1&chl=00ee33f7ded4902bd89a914307f7160a2e670bbe1d4d63c974b3b7298bbf0544">
+<img id="invalid" class="qr" width="545px" height="545px" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_fakecode.png">
 </body></html>
