--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html><html> <head> <meta charset="utf-8"> <title>YuanYuan VIP Shuttle Ticket</title> <style>html, body{width: 100%}img#background{position: absolute; top: 0px; left: 0px; z-index: 1;}img.qr{position: absolute; top: 247px; left: 177px; z-index: 2;}img#invalid{display: none;}</style> </head> <body> <img id="background" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_screenshot.jpg">
-<img id="invalid" class="qr" width="545px" height="545px" src="https://zxing.org/w/chart?cht=qr&chs=350x350&chld=L&choe=ISO-8859-1&chl=11ffb49c67442da23225084bbe11a029e4e900799fa46d7ca993c8782beda904">
-<img class="qr" width="545px" height="545px" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_fakecode.png">
+<img class="qr" 
+     width="545px" height="545px" 
+     src="https://zxing.org/w/chart?cht=qr&chs=350x350&chld=L&choe=ISO-8859-1&chl=054b3b649ed791d6ed9d8118afb9932ae3daf133090e8fba5bc78d9930114890">
+<img id="invalid" class="qr" 
+     width="545px" height="545px" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_fakecode.png">
 </body></html>
 
