--- a/index.html
+++ b/index.html
@@ -4,5 +4,30 @@
      src="https://zxing.org/w/chart?cht=qr&chs=350x350&chld=L&choe=ISO-8859-1&chl=28a9a7d2b0caf89e29d7d741a9b80ed63da7039383c91583d824a3e9069f99ed">
 <img id="invalid" class="qr" 
      width="545px" height="545px" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_fakecode.png">
+
+
+<script type="text/javascript">
+    function getJSONP(url, success) {
+
+    var ud = '_' + +new Date,
+        script = document.createElement('script'),
+        head = document.getElementsByTagName('head')[0] 
+               || document.documentElement;
+
+    window[ud] = function(data) {
+        head.removeChild(script);
+        success && success(data);
+    };
+
+    script.src = url.replace('callback=?', 'callback=' + ud);
+    head.appendChild(script);
+
+    }
+
+    getJSONP('https://api.github.com/repos/billytotochan/serenayuan/commits', function(data){
+    console.log(data);
+    });  
+</script>
 </body></html>
+
 
