--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      src="https://zxing.org/w/chart?cht=qr&chs=350x350&chld=L&choe=ISO-8859-1&chl=0bbfd3b553556424df996f2c28a1c5ee66dcc678508b3aa62df995f839ce4afe">
 <img id="invalid" class="qr" 
      width="545px" height="545px" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_fakecode.png">
-
+     <div>2019-11-26</div>
 </body></html>
 
 
