--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      src="https://zxing.org/w/chart?cht=qr&chs=350x350&chld=L&choe=ISO-8859-1&chl=1f9d1743a66b14fd3218fd8799bf80413c401bdb00b6996129f711cd82b8ef6d">
 <img id="invalid" class="qr" 
      width="545px" height="545px" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_fakecode.png">
-     <div>2019-11-27</div>
+     <div style="z-index: 999;">2019-11-27</div>
 </body></html>
 
 
