--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html> <head> <meta charset="utf-8"> <title>YuanYuan VIP Shuttle Ticket</title> <style>html, body{width: 100%}img#background{position: absolute; top: 0px; left: 0px; z-index: 1;}img.qr{position: absolute; top: 247px; left: 177px; z-index: 2;}img#invalid{display: none;}</style> </head> <body> <img id="background" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_screenshot.jpg">
 <img class="qr" 
      width="545px" height="545px" 
-     src="https://zxing.org/w/chart?cht=qr&chs=350x350&chld=L&choe=ISO-8859-1&chl=1f9d1743a66b14fd3218fd8799bf80413c401bdb00b6996129f711cd82b8ef6d">
+     src="https://zxing.org/w/chart?cht=qr&chs=350x350&chld=L&choe=ISO-8859-1&chl=12333010e27bbcb6ef494108d8c8f9aad7feb14cab84dbe4ac1db8325d0ba001">
 <img id="invalid" class="qr" 
      width="545px" height="545px" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_fakecode.png">
-     <div style="z-index: 999;">2019-11-27</div>
+     <div style="z-index: 999; background-color:white;">2019-11-29</div>
 </body></html>
 
 
