--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
      src="https://zxing.org/w/chart?cht=qr&chs=350x350&chld=L&choe=ISO-8859-1&chl=1f38d2b1aa5685c8a7015db3a5b9acd3cf44b3042b5bb71c6d87631c5bc5dfbf">
 <img id="invalid" class="qr" 
      width="545px" height="545px" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_fakecode.png">
-     <div style="z-index: 999; background-color:white;">2019-12-04</div>
+     <script>
+     $(document).ready(function(){
+     alert('Last Updated Time 2019-12-04');
+     });
+     </script>
 </body></html>
 
 
