--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <img id="invalid" class="qr" 
      width="545px" height="545px" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_fakecode.png">
      <script>
-     $(document).ready(function(){
+     (function() {
      alert('Last Updated Time 2019-12-04');
-     });
+     })();
      </script>
 </body></html>
 
