--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html><html> <head> <meta charset="utf-8"> <title>YuanYuan VIP Shuttle Ticket</title> <style>html, body{width: 100%}img#background{position: absolute; top: 0px; left: 0px; z-index: 1;}img.qr{position: absolute; top: 247px; left: 177px; z-index: 2;}img#invalid{display: none;}</style> 
-     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+     <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+     <link rel="manifest" href="/site.webmanifest">
+     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+     <meta name="msapplication-TileColor" content="#da532c">
+     <meta name="theme-color" content="#ffffff">
+     
      </head> <body> <img id="background" src="https://raw.githubusercontent.com/billytotochan/serenayuan/master/assets/images/hkstp_screenshot.jpg">
 <img class="qr" 
      width="545px" height="545px" 
